=== master

* Make validation_helpers plugin :allow_blank option work correctly when the blank extension is not loaded (jeremyevans)

* Make validation_class_methods plugin no longer require the blank extension (jeremyevans)

* Clear cached associations when touching associations in the touch plugin (jeremyevans)

* Make pg_array_associations model plugin load pg_array extension into database (jeremyevans)

* Remove support for :strict option in nested_attributes plugin, use :unmatched_pk option instead (jeremyevans)

* Make to_json class/dataset method in json_serializer plugin accept :instance_block option to pass block to Model#to_json (jeremyevans)

* Make to_json methods in json_serializer plugin accept blocks that are used to transform values before serializing to JSON (jeremyevans)

* Make Sequel.object_to_json pass block to #to_json (jeremyevans)

* Deprecate identifier_columns plugin, not needed with Sequel.split_symbols = false (jeremyevans)

* Make reloading column_conflicts plugin not remove existing conflict markings (jeremyevans)

* Deprecate cti_base_model, cti_key, and cti_model_map class methods in class_table_inheritance plugin (jeremyevans)

* Make Model.skip_auto_validations(:not_null) in the auto_validations plugin skip not null checks for columns with default values (jeremyevans)

* Make Database#copy_into in jdbc/postgresql adapter respect :server option (jeremyevans)

* Make #to_hash and #to_hash_groups handle options in the static_cache plugin, and add rename #to_hash to #as_hash (jeremyevans)

* Rename Dataset#to_hash to #as_hash, and add #to_hash as an alias, to allow undefing #to_hash to fix ruby calling it implicitly (jeremyevans) (#1375)

* Handle PG* constants deprecated in pg 0.21.0 in the postgres adapter (jeremyevans) (#1377, #1378)

* Support :association_pks_use_associated_table association option in association_pks plugin (jeremyevans)
